fixed layout bug

--- a/src/components/ui/card/styles.css
+++ b/src/components/ui/card/styles.css
@@ -32,7 +32,7 @@
 }
 
 /* VERY SMALL SCREEN */
-@media (max-width: 280px) {
+@media (max-width: 320px) {
     .card .header {
         margin: 0.5rem;
     }
