--- a/src/components/ui/modal/styles.css
+++ b/src/components/ui/modal/styles.css
@@ -1,5 +1,6 @@
 .modal {
     position: fixed;
+    overflow-y: auto;
     background-color: var(--color-white);
     z-index: 1000;
     border-radius: 4px;
@@ -42,7 +43,8 @@
 
 .modal-body {
     padding: 1rem;
-    height: calc(100% - --modal-header-height);
+    overflow-y: auto;
+    height: 100%;
 }
 
 /* BIG SCREEN */
@@ -62,7 +64,7 @@
 }
 
 /* VERY SMALL SCREEN */
-@media (max-width: 280px) {
+@media (max-width: 320px) {
     .modal {
         height: 350px;
         width: 280px;
